text wrapping solve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,7 @@ h6 {
   display: flex;
   list-style: none;
   align-items: center;
+  white-space: nowrap;
 }
 
 .navbar li {
